--- a/brawl-docker-compose.yml
+++ b/brawl-docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   brawl-game:
-    image: brawl-game:latest
+    image: brawl-game:${TAG}
     ports:
        - "9000:9000"
     deploy:
